performance: updated the comparison

--- a/misc/performance/Makefile
+++ b/misc/performance/Makefile
@@ -1,5 +1,7 @@
 all: performance.md
 
+.PHONY: clean
+
 performance.dat: performance.py
 	@./performance.py 5000 0 30 > performance.dat
 
@@ -8,3 +10,7 @@ $(IMAGES): performance.dat
 	@./performance.gnuplot
 performance.md: $(IMAGES)
 	@true
+
+clean:
+	@rm -f performance.dat $(IMAGES)
+
