--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
-python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
-
 install:
-  - "pip install -e '.[_dev]'"
-
-script: make test
+  - pip install tox
+script:
+  - tox
+env:
+  - TOXENV=py27
+  - TOXENV=py33
+  - TOXENV=py34
