Updated package to 2018 :)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,27 @@
+os: linux
+sudo: false
 language: python
+
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py
+    - python: 3.4
+      env: TOXENV=py
+    - python: 3.5
+      env: TOXENV=py
+    - python: 3.6
+      env: TOXENV=py
+    - python: 3.7-dev
+      env: TOXENV=py
+    - python: pypy
+      env: TOXENV=py
+    - python: pypy3
+      env: TOXENV=py
+
 install:
   - pip install tox
+cache:
+  - pip
 script:
   - tox
-env:
-  - TOXENV=py27
-  - TOXENV=py33
-  - TOXENV=py34
-  - TOXENV=pypy
