--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist=py27,py33,py34,pypy
+envlist=py{27,34,35,36,37},pypy,pypy3
 skip_missing_interpreters=True
 
 [testenv]
-deps=-rrequirements.txt
+deps=-rrequirements-dev.txt
 commands=
     nosetests {posargs:tests/}
 whitelist_externals=make
 
 [testenv:dev]
-deps=-rrequirements.txt
+deps=-rrequirements-dev.txt
 usedevelop=True
